--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -438,7 +438,7 @@ article .inner h2, article .inner h3 { color: #465866; }
 #container article.thin.signup { text-align: center; }
 #container article.thin.signup footer .inner .white_button { padding-left: 40px; padding-right: 40px; }
 #container article.thin.signup footer .inner div.center { padding: 17px 0; }
-#container article.thin.signup .inner .content { padding: 30px 0 0 0; }
+#container article.thin.signup .inner .content { width: 570px; padding: 30px 0 0 0; }
 #container article.thin.signup .inner .content a { font-size: 15px; }
 #container article.thin.signup .inner .content p { margin: 0 0 46px 0; padding: 0; font-size: 17px; }
 #container article.mini { width: 610px; margin: 0 auto 0 auto; }
@@ -631,6 +631,9 @@ article .inner h2, article .inner h3 { color: #465866; }
 #container .cycle .inner-cycle article form .inner fieldset .field span.mandatory, #container .cycle .inner-cycle article .inner fieldset .field span.mandatory { float: left; color: rgba(125, 138, 146, 0.4); font-size: 13px; margin-top: 10px; margin-left: 5px; }
 #container .cycle .inner-cycle article form .inner fieldset .field.territory, #container .cycle .inner-cycle article .inner fieldset .field.territory { width: 174px; z-index: 1000; }
 #container .cycle .inner-cycle article form .inner fieldset .field.municipality, #container .cycle .inner-cycle article .inner fieldset .field.municipality { width: 174px; float: left; clear: none; }
+#container .cycle .inner-cycle article form .inner fieldset .field.postal_code, #container .cycle .inner-cycle article .inner fieldset .field.postal_code { width: 415px; float: left; clear: none; overflow: hidden; }
+#container .cycle .inner-cycle article form .inner fieldset .field.postal_code .input_field, #container .cycle .inner-cycle article .inner fieldset .field.postal_code .input_field { width: 203px; float: left; clear: none; }
+#container .cycle .inner-cycle article form .inner fieldset .field.postal_code .input_field input[type="text"], #container .cycle .inner-cycle article .inner fieldset .field.postal_code .input_field input[type="text"] { margin: 0 5px 0 0; }
 #container .cycle .inner-cycle article form .inner fieldset .field.legal label, #container .cycle .inner-cycle article form .inner fieldset .field.legal a, #container .cycle .inner-cycle article .inner fieldset .field.legal label, #container .cycle .inner-cycle article .inner fieldset .field.legal a { font-size: 15px; text-transform: none; font-weight: normal; }
 #container .cycle .inner-cycle article form .inner fieldset .field.born_at, #container .cycle .inner-cycle article .inner fieldset .field.born_at { float: left; width: 415px; clear: both; }
 #container .cycle .inner-cycle article form .inner fieldset .field.born_at .input_field, #container .cycle .inner-cycle article .inner fieldset .field.born_at .input_field { width: 415px; }
